--- a/.github/workflows/npmdemo.yml
+++ b/.github/workflows/npmdemo.yml
@@ -35,7 +35,7 @@ jobs:
       run: npm run build --if-present
     - name: npm test
       id: npm_test
-      run: npm test
+      run: npm test -- --coverage
     - uses: act10ns/slack@v1
       with:
         status: ${{ job.status }}
