--- a/.github/workflows/npmdemo.yml
+++ b/.github/workflows/npmdemo.yml
@@ -33,6 +33,7 @@ jobs:
     - name: npm build
       id: npm_build
       run: npm run build --if-present
+    - run: npm run lint
     - name: npm test
       id: npm_test
       run: npm test -- --coverage
@@ -42,3 +43,4 @@ jobs:
         steps: ${{ toJson(steps) }}
         slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
       if: always() 
+     
